--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "font-awesome": "^4.7.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
     "node-fetch": "^3.3.2",
