--- a/src/server/vercel.json
+++ b/src/server/vercel.json
@@ -2,7 +2,7 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "*.js",
+			"src": "api/*.js",
 			"use": "@vercel/node"
 		}
 	],
@@ -14,7 +14,7 @@
 	],
 	"headers": [
     {
-      "source": "/api.(.*)",
+      "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
