--- a/src/server/vercel.json
+++ b/src/server/vercel.json
@@ -8,7 +8,7 @@
 	],
 	"routes": [
 		{
-			"src": "/api/(.*)",
+			"src": "/(.*)",
 			"dest": "/",
 			"methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
 			"headers": {
