--- a/src/server/vercel.json
+++ b/src/server/vercel.json
@@ -12,7 +12,8 @@
 			"dest": "/",
 			"methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
 			"headers": {
-			  "Access-Control-Allow-Origin": "https://nat-go.vercel.app"
+			  "Access-Control-Allow-Origin": "https://nat-go.vercel.app",
+			  "Access-Control-Allow-Credentials": "true"
 			}
 		}
 	]
