--- a/src/server/vercel.json
+++ b/src/server/vercel.json
@@ -10,12 +10,17 @@
 		{
 			"src": "/(.*)",
 			"dest": "/",
-			"methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+			"methods": ["OPTIONS"],
 			"headers": {
 			  "Access-Control-Allow-Origin": "https://nat-go.vercel.app",
 			  "Access-Control-Allow-Credentials": "true",
-			  "Access-Control-Allow-Headers": "Content-Type"
+			  "Access-Control-Allow-Headers": "Content-Type",
+			  "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
 			}
+		},
+		{
+			"src": "/(.*)",
+			"dest": "/"
 		}
 	]
 }
