--- a/src/server/vercel.json
+++ b/src/server/vercel.json
@@ -1,26 +1,17 @@
 {
 	"version": 2,
 	"builds": [
-		{
-			"src": "*.js",
-			"use": "@vercel/node"
-		}
+	  {
+		"src": "*.js",
+		"use": "@vercel/node"
+	  }
 	],
 	"routes": [
-		{
-			"src": "/(.*)",
-			"dest": "/",
-			"methods": ["OPTIONS"],
-			"headers": {
-			  "Access-Control-Allow-Origin": "https://nat-go.vercel.app",
-			  "Access-Control-Allow-Credentials": "true",
-			  "Access-Control-Allow-Headers": "Content-Type",
-			  "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
-			}
-		},
-		{
-			"src": "/(.*)",
-			"dest": "/"
-		}
+	  {
+		"src": "/(.*)",
+		"dest": "/",
+		"methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+	  }
 	]
-}
+  }
+  
