--- a/src/server/vercel.json
+++ b/src/server/vercel.json
@@ -8,15 +8,8 @@
 	],
 	"routes": [
 	  {
-		"src": "/(.*)",
-		"dest": "/",
-		"methods": ["OPTIONS", "GET", "POST", "PUT", "DELETE"],
-		"headers": {
-		  "Access-Control-Allow-Origin": "https://nat-go.vercel.app",
-		  "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-		  "Access-Control-Allow-Headers": "Content-Type, Authorization",
-		  "Access-Control-Allow-Credentials": "true"
-		}
+		"source": "/(.*)",
+		"destination": "/api"
 	  }
 	]
   }
