--- a/src/server/vercel.json
+++ b/src/server/vercel.json
@@ -1,16 +1,2 @@
-{
-	"version": 2,
-	"builds": [
-	  {
-		"src": "*.js",
-		"use": "@vercel/node"
-	  }
-	],
-	"routes": [
-	  {
-		"source": "/(.*)",
-		"destination": "/api"
-	  }
-	]
-  }
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
   
