--- a/src/server/vercel.json
+++ b/src/server/vercel.json
@@ -1,2 +1,17 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{ 
+	"version": 2, 
+	"rewrites": 
+		[{ 
+			"source": "/(.*)", 
+			"destination": "/api",
+			"methods": ["OPTIONS", "GET", "POST", "PUT", "DELETE"],
+			"headers": {
+			"Access-Control-Allow-Origin": "https://nat-go.vercel.app",
+			"Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+			"Access-Control-Allow-Headers": "Content-Type, Authorization",
+			"Access-Control-Allow-Credentials": "true"
+			}
+
+		}] 
+	}
   
